--- a/package.json
+++ b/package.json
@@ -3,18 +3,15 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "nodemon ./bin/www",
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
-    "bunyan": "^1.8.15",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "^0.29.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
     "pg-promise": "^11.2.0"
